Added CDN support

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -10,7 +10,7 @@
 	<title>UI5 Application wcintegration</title>
 
 	<script id="sap-ui-bootstrap"
-			src="resources/sap-ui-core.js"
+			src="https://ui5.sap.com/1.108.1/resources/sap-ui-core.js"
 			data-sap-ui-resourceroots='{
 				"com.hse.wcintegration": "./"
 			}'
