removed ui5 deps and changed cdn src

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,7 +11,7 @@
 	<title>UI5 Application wcintegration</title>
 
 	<script id="sap-ui-bootstrap" 
-			src="https://ui5.sap.com/1.108.1/resources/sap-ui-core.js" 
+			src="https://sdk.openui5.org/1.108.1/resources/sap-ui-core.js" 
 			data-sap-ui-resourceroots='{
 				"com.hse.wcintegration": "./",
 				"wcintegration.lib.firebase": "./resources/wcintegration/lib/firebase"
